--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
   text-align: center;
+  background-color: dimgrey;
+  overflow: hidden;
 }
 
 .App-logo {
