updated style: now dark mode

--- a/src/components/D3Container/D3Container.css
+++ b/src/components/D3Container/D3Container.css
@@ -1,7 +1,7 @@
 #graphContainer {
     width: 1024px;
     height: 1024px;
-    background-color: lightgreen;
+    background-color: #2A2C32;
     padding: 0px;
     margin: 0px;
 }
@@ -18,7 +18,8 @@
 }
 
 .links line {
-    stroke: #999;
+    stroke: #A0A5AF;
+    stroke-width: 2px;
     stroke-opacity: 0.6;
 }
   
